Change greeting from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Letter To My Friend</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="prin.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 
@@ -422,4 +422,5 @@
     </div>
 
 </body>
+
 </html>
